@@ -1,10 +1,13 @@
 package com.mikosik.stork.problem;
 
+import static com.mikosik.stork.common.Collections.eachCell;
 import static com.mikosik.stork.common.Description.description;
+import static com.mikosik.stork.common.ImmutableList.join;
+import static com.mikosik.stork.common.ImmutableList.single;
 import static com.mikosik.stork.common.io.Ascii.isAscii;
 import static com.mikosik.stork.common.io.Ascii.isPrintable;
 import static java.lang.Byte.toUnsignedInt;
-import static java.lang.String.format;
+import static java.lang.String.join;
 
 import com.mikosik.stork.common.Description;
 import com.mikosik.stork.compile.tokenize.Bracket;
@@ -13,6 +16,8 @@ import com.mikosik.stork.compile.tokenize.Label;
 import com.mikosik.stork.compile.tokenize.StringLiteral;
 import com.mikosik.stork.compile.tokenize.Symbol;
 import com.mikosik.stork.compile.tokenize.Token;
+import com.mikosik.stork.model.Identifier;
+import com.mikosik.stork.model.Variable;
 import com.mikosik.stork.problem.compile.CannotCompile;
 import com.mikosik.stork.problem.compile.importing.CannotImport;
 import com.mikosik.stork.problem.compile.importing.IllegalCharacter;
@@ -42,7 +47,7 @@ public class Describe {
   public static Description describe(CannotCompute cannotCompute) {
     return switch (cannotCompute) {
       case FunctionMissing problem -> description(
-          "function [%s] is missing".formatted(problem.function.name()));
+          format("function [%s] is missing", problem.function));
       default -> description("cannot compute");
     };
   }
@@ -51,7 +56,7 @@ public class Describe {
     return description(switch (cannotImport) {
       case IllegalCharacter problem -> format(
           "import [%s] contains illegal %s",
-          problem.text, describe(problem.character));
+          problem.text, problem.character);
       default -> throw new RuntimeException();
     });
   }
@@ -60,10 +65,10 @@ public class Describe {
     return description(switch (cannotTokenize) {
       case IllegalCharacterInString problem -> format(
           "string contains illegal %s",
-          describe(problem.character));
+          problem.character);
       case IllegalCharacterInCode problem -> format(
           "code contains illegal %s",
-          describe(problem.character));
+          problem.character);
       default -> throw new RuntimeException();
     });
   }
@@ -72,7 +77,7 @@ public class Describe {
     return description(switch (cannotParse) {
       case UnexpectedToken problem -> format(
           "unexpected %s",
-          describe(problem.token));
+          problem.token);
       default -> throw new RuntimeException();
     });
   }
@@ -81,38 +86,46 @@ public class Describe {
     return description(switch (cannotLink) {
       case FunctionDefinedMoreThanOnce problem -> format(
           "function [%s] is defined more than once",
-          problem.function.name());
+          problem.function);
       case FunctionNotDefined problem -> format(
           "function [%s] imports undefined function [%s]",
-          problem.location.name(), problem.undefined.name());
+          problem.location, problem.undefined);
       case VariableCannotBeBound problem -> format(
           "function [%s] uses undefined variable [%s]",
-          problem.location.name(), problem.variable.name);
+          problem.location, problem.variable);
       default -> throw new RuntimeException();
     });
   }
 
-  private static String describe(Token token) {
-    return switch (token) {
-      case Label label -> "label [%s]".formatted(label.string);
-      case Bracket bracket -> "bracket [%c]".formatted(bracket.character);
-      case Symbol symbol -> "symbol [%c]".formatted(symbol.character);
-      case IntegerLiteral literal -> "integer [%s]".formatted(literal.value);
-      case StringLiteral literal -> "string [%s]".formatted(literal.string);
-      default -> "token [%s]".formatted(token.getClass().getSimpleName());
-    };
+  public static String format(String format, Object... args) {
+    return String.format(format, eachCell(Describe::formatArg).apply(args));
   }
 
-  private static String describe(byte character) {
-    return "%s character %s".formatted(
-        isAscii(character)
-            ? isPrintable(character)
-                ? "ascii"
-                : "non-printable ascii"
-            : "non-ascii",
-        isPrintable(character)
-            ? "[%c]".formatted(character)
-            : "with decimal value of [%d]"
-                .formatted(toUnsignedInt(character)));
+  private static Object formatArg(Object arg) {
+    return switch (arg) {
+      case Token token -> switch (token) {
+        case Label label -> "label [%s]".formatted(label.string);
+        case Bracket bracket -> "bracket [%c]".formatted(bracket.character);
+        case Symbol symbol -> "symbol [%c]".formatted(symbol.character);
+        case IntegerLiteral literal -> "integer [%s]".formatted(literal.value);
+        case StringLiteral literal -> "string [%s]".formatted(literal.string);
+        default -> "token [%s]".formatted(token.getClass().getSimpleName());
+      };
+      case Byte character -> "%s character %s".formatted(
+          isAscii(character)
+              ? isPrintable(character)
+                  ? "ascii"
+                  : "non-printable ascii"
+              : "non-ascii",
+          isPrintable(character)
+              ? "[%c]".formatted(character)
+              : "with decimal value of [%d]"
+                  .formatted(toUnsignedInt(character)));
+      case Variable variable -> variable.name;
+      case Identifier identifier -> join("/", join(
+          identifier.namespace.components,
+          single(identifier.variable.name)));
+      default -> arg;
+    };
   }
 }
